2000-10-16  Stephen F. Booth  <sbooth@gnu.org>

	* demo/upload.html: New file upload demo
	* demo/upload.cpp: New file upload demo
	* demo/Makefile.am: Added file upload demo
	* demo/testform.html: Removed file upload support
	* demo/test.cpp: Removed file upload support

2000-10-15  Stephen F. Booth  <sbooth@gnu.org>

	* example/yourSource.cpp: Changed instances of 'Cgicc' to 'cgicc'
	* demo/test.cpp: 'Cgicc' -> 'cgicc'
	* demo/dns.cpp: 'Cgicc' -> 'cgicc'
	* demo/testform.html: Updated e-mail address
	* info/version.texi: Updated for 3.1.4
	* README: 'Cgicc' -> 'cgicc'
	* README.WIN: 'Cgicc' -> 'cgicc'
	* AUTHORS: 'Cgicc' -> 'cgicc'
	* NEWS: 'Cgicc' -> 'cgicc'
	* Makefile.am: Removed reference to .spec file

2000-10-07  Stephen F. Booth  <sbooth@gnu.org>

	* demo/dns.cpp: Updated URL
	* demo/test.cpp: Updated URL
	* demo/testform.html: Updated URL
	* demo/dns.cpp: Changed various instances of 'Cgicc' to 'cgicc'
	* demo/test.cpp: Changed various instances of 'Cgicc' to 'cgicc'
	* demo/testform.html: Changed various instances of 'Cgicc' to 'cgicc'
	* info/cgi-classes.texinfo: Changed various instances of 'Cgicc' to 
	'cgicc'
	* info/cgicc.texinfo: Changed various instances of 'Cgicc' to 'cgicc'
	* info/class-cgicc.texinfo: Changed various instances of 'Cgicc' to 
	'cgicc'
	* info/classes-html.texinfo: Changed various instances of 'Cgicc' to
	'cgicc'
	* info/html-classes.texinfo: Changed various instances of 'Cgicc' to
	'cgicc'
	* info/library-overview.texinfo: Changed various instances of 'Cgicc' 
	to 'cgicc'
	* info/tutorial.texinfo: Changed various instances of 'Cgicc' to 
	'cgicc'
	* support/cgicc.spec.in: Removed
	* configure.in: Removed reference to cgicc.spec, version to 3.1.4
	* cgicc/Makefile.am: Updated libtool version
	* cgicc/HTMLAttributes.h: Updated copyright and mail info

2000-09-21  Stephen F. Booth  <sbooth@gnu.org>

	* demo/dns.cpp: Fix for http servers not running on port 80
	(reported by qconnell@medic.up.ac.za)