@@ -1,8 +1,8 @@
 dnl -*-m4-*-
-dnl $Id: configure.in,v 1.25 2000/10/07 18:38:01 sbooth Exp $
+dnl $Id: configure.in,v 1.26 2000/11/02 14:05:18 sbooth Exp $
 
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Revision: 1.25 $)
+AC_REVISION($Revision: 1.26 $)
 AC_INIT(cgicc/Cgicc.cpp)
 AC_CONFIG_AUX_DIR(support)
 AM_INIT_AUTOMAKE(cgicc, 3.1.4)
@@ -87,5 +87,5 @@ AC_ARG_ENABLE(demos,
 AM_CONDITIONAL(DEMOS, test "$demos" = true)
 
 AC_OUTPUT([Makefile cgicc/Makefile cgicc/CgiDefs.h info/Makefile demo/Makefile 
-	example/Makefile])
+	example/Makefile support/Makefile support/cgicc-config])
 
