@@ -1,0 +1,5 @@
+## $Id: Makefile.am,v 1.1 2000/11/02 14:05:18 sbooth Exp $
+
+CLEANFILES = *~
+
+bin_SCRIPTS = cgicc-config
