@@ -1,0 +1,147 @@
+#!/bin/sh
+
+##
+##  $Id: cgicc-config.in,v 1.1 2000/11/02 14:05:18 sbooth Exp $
+##
+##  Copyright (C) 2000 Stephen F. Booth
+##
+##  This program is free software; you can redistribute it and/or modify
+##  it under the terms of the GNU General Public License as published by
+##  the Free Software Foundation; either version 2 of the License, or
+##  (at your option) any later version.
+##
+##  This program is distributed in the hope that it will be useful,
+##  but WITHOUT ANY WARRANTY; without even the implied warranty of
+##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+##  GNU General Public License for more details.
+##
+##  You should have received a copy of the GNU General Public License
+##  along with this program; if not, write to the Free Software
+##  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+##
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+
+## Usage info
+usage()
+{
+    cat <<EOF
+Usage: @PACKAGE@-config [OPTIONS] [LIBRARIES]
+Options:
+    --prefix       Display architecture-independent installation dir
+    --exec-prefix  Display architecture-dependent installation dir
+    --cflags       Display C compiler flags
+    --cxxflags     Display C++ compiler flags
+    --ldflags      Display linker flags
+    --libs         Display linking information
+    --host         Display host information
+    --version      Display version information
+    --help         Display this message
+Libraries:
+	@PACKAGE@
+EOF
+    exit $1
+}
+
+## If no arguments, print usage info
+if test $# -eq 0; then
+    usage 1 1>&2
+fi
+
+## Automatically link to cgicc
+lib_@PACKAGE@=yes
+
+## Parse command line
+while test $# -gt 0; do
+    case "$1" in
+	-*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
+	*) optarg= ;;
+    esac
+
+    case $1 in
+
+	## Architecture-independent dir
+	--prefix)
+	    echo $prefix
+	    exit 0
+	    ;;
+
+	## Architecture-dependent dir
+	--exec_prefix)
+	    echo $exec_prefix
+	    exit 0
+	    ;;
+
+	## C compiler flags
+	--cflags)
+	    if test "${prefix}/include" != /usr/include ; then
+		includes="-I${prefix}/include"
+	    fi
+	    echo_cflags=yes
+	    ;;
+
+	## C++ compiler flags
+	--cxxflags)
+	    if test "${prefix}/include" != /usr/include ; then
+		includes="-I${prefix}/include"
+	    fi
+	    echo_cxxflags=yes
+	    ;;
+
+	## Linking information
+	--ldflags)
+	    echo @LDFLAGS@
+	    exit 0
+	    ;;
+
+	## Linking information
+	--libs)
+	    echo_libs=yes
+	    ;;
+
+	## Host information
+	--host)
+	    echo @host@
+	    exit 0
+	    ;;	    
+
+	## Version information
+	--version)
+	    echo @VERSION@
+	    exit 0
+	    ;;
+
+        ## cgicc lib
+	@PACKAGE@)
+	    lib_@PACKAGE@=yes
+	    ;;
+
+	## Everything else
+	*)
+	    usage 1 1>&2
+	    ;;
+    esac
+    shift
+done
+
+## C compiler flags
+if test "$echo_cflags" = "yes"; then
+    cflags="@CFLAGS@"
+    echo $includes $cflags
+fi
+
+## C++ compiler flags
+if test "$echo_cxxflags" = "yes"; then
+    cxxflags="@CXXFLAGS@"
+    echo $includes $cxxflags
+fi
+
+## Linking info
+if test "$echo_libs" = "yes"; then
+    libs="@LIBS@"
+    if test "$lib_@PACKAGE@" = "yes"; then
+	libs="$libs -l@PACKAGE@"
+    fi
+    echo "-L${exec_prefix}/lib $libs"
+fi
